Add checks to verify script packaged JAR